fix: content shift on modal open

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,6 +7,8 @@ body {
 }
 
 .no-scroll {
+    height: 100hv;
+    padding-right: 15px;
     overflow: hidden;
 }
 
